--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^12.0.5",
     "@angular/platform-browser-dynamic": "^12.0.5",
     "@angular/router": "^12.0.5",
+    "@apidevtools/json-schema-ref-parser": "^11.1.0",
     "@jsonforms/angular": "3.1.0",
     "@jsonforms/angular-material": "3.1.0",
     "@jsonforms/core": "3.1.0",
